overflow fix

--- a/app/assets/stylesheets/public/posts.css.sass
+++ b/app/assets/stylesheets/public/posts.css.sass
@@ -73,6 +73,7 @@
   #post-data
     margin: 3em 8em 0 8em
     z-index: 2
+    overflow: hidden
 
     > a, > span
       font-size: 0.9em
